--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.9",
     "@types/pino-http": "^5.8.4",
+    "@vercel/node": "^5.5.23",
     "nodemon": "^3.1.11",
     "pino-pretty": "^13.1.3",
     "tsx": "^4.21.0",
